2005-11-09  Miguel de Icaza  <miguel@novell.com>

	* unix/util.c (set_dirs): Instead of hardcoding the value to
	/usr/bin, use MONO_BINDIR which comes from Automake's bindir.  If
	the executable is in the place configured, use the Automake
	settings.  Otherwise use the standard-layout based computed
	paths. 

2005-11-08  Miguel de Icaza  <miguel@novell.com>

	* unix/util.c (set_dirs): The buffer is overwritten by the
	compute_base routine, so do not call it before checking for the
	/usr/bin/ prefix.

2005-11-01  Miguel de Icaza  <miguel@novell.com>

	* unix/util.c (set_dirs): Implement a relocatable version.

2005-03-29  Sebastien Pouliot  <sebastien@ximian.com>

	* gc_wrapper.h: Add required winsock2.h header for compiling with 
	VS.NET and let the project file defines GC_GCJ_SUPPORT (to avoid 
	tons of warnings).