@@ -21,7 +21,10 @@
 	 */
 	
 #	if defined(HAVE_KW_THREAD) && defined(USE_INCLUDED_LIBGC) && !defined(__powerpc__)
-#		define GC_REDIRECT_TO_LOCAL
+        /* The local alloc stuff is in pthread_support.c, but solaris uses solaris_threads.c */
+#       if !defined(__sparc__)
+#		    define GC_REDIRECT_TO_LOCAL
+#       endif
 #	endif
 
 #	ifdef HAVE_GC_GC_H
