@@ -1,3 +1,8 @@
+2006-03-02  Zoltan Varga  <vargaz@gmail.com>
+
+	* gc_wrapper.h: Allways disable thread local alloc on sparc even if __thread support
+	is available.
+
 2005-11-09  Miguel de Icaza  <miguel@novell.com>
 
 	* unix/util.c (set_dirs): Instead of hardcoding the value to
